[project]
name = "quicktest"
version = "0.1.0"
description = ""
authors = [
    {name = "Maria Herne",email = "noelia.herne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "graphiti-core (>=0.10.3,<0.11.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pygithub (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
